<?xml version="1.0"?>
<package format="3">
  <name>pinocchio_model_builder</name>
  <version>0.0.0</version>
  <description>pinocchio_model_builder</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pinocchio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
